force-app/main/default/objects/ApprovalAnswers__c/ApprovalAnswers__c.object-meta.xml
<CustomObject>
    <label>Approval Answer</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Approval Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>