force-app/main/default/objects/ApprovalAnswers__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <inlineHelpText>Free text answer to the approval question</inlineHelpText>
    <label>Answer</label>
    <type>TextArea</type>
</CustomField>