force-app/main/default/objects/ApprovalAnswers__c/fields/Approval_Rule__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Approval Rule</label>
    <referenceTo>RCA_Approval_Rule__c</referenceTo>
    <relationshipLabel>Approval Answers</relationshipLabel>
    <relationshipName>Approval_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>