force-app/main/default/objects/ApprovalAnswers__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <formula>Question__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Text</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>