force-app/main/default/objects/ApprovalAnswers__c/fields/Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Approval Answers</relationshipLabel>
    <relationshipName>Approval_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>