force-app/main/default/objects/ApprovalAnswers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Text__c</columns>
    <columns>Answer__c</columns>
    <columns>Question__c</columns>
    <columns>Approval_Rule__c</columns>
    <columns>Quote_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>